Ooops! Wrong input type (๑•́ㅿ•̀๑)ᔆᵒʳʳᵞ

--- a/index.html
+++ b/index.html
@@ -26,17 +26,18 @@
       <div class="form-group">
         <fieldset>
           <legend>Quality Preset</legend>
-          <input id="best" name="best" type="checkbox" />
-          <label for="best"> Best </label>
 
-          <input id="1080p" name="1080p" type="checkbox" />
-          <label for="1080p"> 1080p </label>
+          <input id="best" name="quality" type="radio" value="best" checked />
+          <label for="best">Best</label>
 
-          <input id="720p" name="720p" type="checkbox" />
-          <label for="720p"> 720p </label>
+          <input id="1080p" name="quality" type="radio" value="1080p" />
+          <label for="1080p">1080p</label>
 
-          <input id="audio" name="audio" type="checkbox" />
-          <label for="audio"> Audio </label>
+          <input id="720p" name="quality" type="radio" value="720p" />
+          <label for="720p">720p</label>
+
+          <input id="audio" name="quality" type="radio" value="audio" />
+          <label for="audio">Audio</label>
         </fieldset>
       </div>
 
