--- a/index.html
+++ b/index.html
@@ -80,10 +80,17 @@
       </div>
 
       <div class="form-group">
-        <label for="custom-output-name" name="custom-output-name">
-          Custom Output Name
-        </label>
+        <label for="custom-output-name">Custom Output Name</label>
         <input id="custom-output-name" type="checkbox" />
+
+        <fieldset id="custom-output-field" style="display: none">
+          <legend>Output Template</legend>
+          <input
+            id="output-template"
+            type="text"
+            placeholder="%(title)s.%(ext)s"
+          />
+        </fieldset>
       </div>
     </form>
 
@@ -123,6 +130,9 @@
       const timeFieldsets = document.querySelectorAll(
         "#download-time-range ~ fieldset"
       );
+
+      // Custom output name fieldset
+      const customOutputField = document.getElementById("custom-output-field");
 
       // The mighty function to update your beloved command.
       function updateCommand() {
@@ -184,8 +194,20 @@
         });
       });
 
+      // Toggle custom output name visibility
+      customOutputCheckbox.addEventListener("change", () => {
+        customOutputField.style.display = customOutputCheckbox.checked
+          ? "block"
+          : "none";
+      });
+
       // Listening to all inputs 	|ω･)ﾉ
       videoUrlInput.addEventListener("input", updateCommand);
+      customOutputCheckbox.addEventListener("change", updateCommand);
+      [startH, startM, startS, endH, endM, endS].forEach((input) => {
+        input.addEventListener("input", updateCommand);
+      });
+      excludePlaylistCheckbox.addEventListener("change", updateCommand);
     </script>
   </body>
 </html>
