--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>yt-dlp Command Generator</title>
     <style>
+      /* General stuff */
+      :root {
+        --background-color: hsl(222, 47%, 8%);
+        --primary: hsl(262, 83%, 58%);
+        --ring: var(--primary);
+        --card-hover-bg: hsl(262, 82%, 20%);
+      }
+
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
+
       body {
-        background-color: hsl(222, 47%, 8%);
+        background-color: var(--background-color);
         color: white;
         margin-left: auto;
         margin-right: auto;
@@ -25,6 +39,10 @@
         padding: 24px;
       }
 
+      fieldset {
+        border: none;
+      }
+
       .togglable-options {
         margin-top: 24px;
         padding: 16px;
@@ -37,6 +55,72 @@
 
       #download-time-range ~ fieldset {
         display: none;
+      }
+
+      /* Radio cards stuff */
+      .quality-preset-cards-wrapper {
+        margin-top: 12px;
+        display: flex;
+        gap: 8px;
+        justify-content: space-between;
+        flex-wrap: wrap;
+      }
+      
+      .radio-card {
+        position: relative;
+        flex: 1;
+      }
+
+      .radio-card input[type="radio"] {
+        position: absolute;
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+        margin: 0;
+      }
+
+      .radio-card label {
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 0.25rem;
+        padding: 0.75rem 1rem;
+        border: 1px solid var(--border-color);
+        background-color: var(--background);
+        border-radius: 0.375rem;
+        transition: all 0.2s;
+        height: 100%;
+        min-height: 4rem;
+      }
+
+      .radio-card label svg {
+        width: 1rem;
+        height: 1rem;
+      }
+
+      .radio-card label span {
+        font-size: 0.75rem;
+      }
+
+      .radio-card input[type="radio"]:checked + label {
+        background-color: var(--primary);
+        border-color: var(--primary);
+      }
+
+      .radio-card input[type="radio"]:hover + label {
+        background-color: var(--card-hover-bg);
+      }
+
+      .radio-card input[type="radio"]:checked:hover + label {
+        background-color: hsla(262, 83%, 58%, 0.9);
+      }
+
+      .radio-card input[type="radio"]:focus-visible + label {
+        outline: 2px solid var(--ring);
+        outline-offset: 2px;
       }
     </style>
   </head>
@@ -59,17 +143,116 @@
         <fieldset>
           <legend>Quality Preset</legend>
 
-          <input id="best" name="quality" type="radio" value="best" checked />
-          <label for="best">Best</label>
+          <div class="quality-preset-cards-wrapper">
+            <div class="radio-card">
+              <input
+                id="best"
+                name="quality"
+                type="radio"
+                value="best"
+                checked
+              />
+              <label for="best">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <rect width="18" height="18" x="3" y="3" rx="2"></rect>
+                  <path d="M7 3v18"></path>
+                  <path d="M3 7.5h4"></path>
+                  <path d="M3 12h18"></path>
+                  <path d="M3 16.5h4"></path>
+                  <path d="M17 3v18"></path>
+                  <path d="M17 7.5h4"></path>
+                  <path d="M17 16.5h4"></path>
+                </svg>
+                <span>Best</span>
+              </label>
+            </div>
 
-          <input id="1080p" name="quality" type="radio" value="1080p" />
-          <label for="1080p">1080p</label>
+            <div class="radio-card">
+              <input id="1080p" name="quality" type="radio" value="1080p" />
+              <label for="1080p">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <rect width="18" height="18" x="3" y="3" rx="2"></rect>
+                  <path d="M7 3v18"></path>
+                  <path d="M3 7.5h4"></path>
+                  <path d="M3 12h18"></path>
+                  <path d="M3 16.5h4"></path>
+                  <path d="M17 3v18"></path>
+                  <path d="M17 7.5h4"></path>
+                  <path d="M17 16.5h4"></path>
+                </svg>
+                <span>1080p</span>
+              </label>
+            </div>
 
-          <input id="720p" name="quality" type="radio" value="720p" />
-          <label for="720p">720p</label>
+            <div class="radio-card">
+              <input id="720p" name="quality" type="radio" value="720p" />
+              <label for="720p">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <rect width="18" height="18" x="3" y="3" rx="2"></rect>
+                  <path d="M7 3v18"></path>
+                  <path d="M3 7.5h4"></path>
+                  <path d="M3 12h18"></path>
+                  <path d="M3 16.5h4"></path>
+                  <path d="M17 3v18"></path>
+                  <path d="M17 7.5h4"></path>
+                  <path d="M17 16.5h4"></path>
+                </svg>
+                <span>720p</span>
+              </label>
+            </div>
 
-          <input id="audio" name="quality" type="radio" value="audio" />
-          <label for="audio">Audio</label>
+            <div class="radio-card">
+              <input id="audio" name="quality" type="radio" value="audio" />
+              <label for="audio">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M9 18V5l12-2v13"></path>
+                  <circle cx="6" cy="18" r="3"></circle>
+                  <circle cx="18" cy="16" r="3"></circle>
+                </svg>
+                <span>Audio</span>
+              </label>
+            </div>
+          </div>
         </fieldset>
       </div>
 
