--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         --primary: hsl(262, 83%, 58%);
         --ring: var(--primary);
         --card-hover-bg: hsl(262, 82%, 20%);
+        --muted: hsl(215, 20%, 55%);
+        --14px: 0.875rem;
+        --18px: 1.125rem;
       }
 
       * {
@@ -19,7 +22,25 @@
         padding: 0;
       }
 
+      label {
+        display: block;
+      }
+
+      input[type="text"] {
+        margin-top: 8px;
+        width: 100%;
+        height: 2.5rem;
+        padding: 0.5rem 0.75rem;
+        background-color: var(--background-color);
+        border: 1px solid var(--border-color);
+        border-radius: 6px;
+        font-size: var(--14px);
+        color: white;
+        transition: all 0.2s;
+      }
+
       body {
+        padding: 32px;
         background-color: var(--background-color);
         color: white;
         margin-left: auto;
@@ -57,6 +78,35 @@
         display: none;
       }
 
+      /* Header */
+      header p {
+        margin-top: 8px;
+        color: var(--muted);
+      }
+
+      /* Form */
+      form {
+        margin-top: 32px;
+      }
+
+      .form-group {
+        margin-top: 24px;
+      }
+
+      .form-group.first {
+        margin-top: 0;
+      }
+
+      form h2 {
+        font-size: var(--18px);
+      }
+
+      .configuration-sub-title {
+        margin-top: 6px;
+        margin-bottom: 16px;
+        color: var(--muted);
+      }
+
       /* Radio cards stuff */
       .quality-preset-cards-wrapper {
         margin-top: 12px;
@@ -65,7 +115,7 @@
         justify-content: space-between;
         flex-wrap: wrap;
       }
-      
+
       .radio-card {
         position: relative;
         flex: 1;
@@ -89,7 +139,7 @@
         gap: 0.25rem;
         padding: 0.75rem 1rem;
         border: 1px solid var(--border-color);
-        background-color: var(--background);
+        background-color: var(--background-color);
         border-radius: 0.375rem;
         transition: all 0.2s;
         height: 100%;
@@ -132,9 +182,9 @@
 
     <form>
       <h2>Configuration</h2>
-      <p>Customize your download options</p>
+      <p class="configuration-sub-title">Customize your download options</p>
 
-      <div class="form-group">
+      <div class="form-group first">
         <label for="video-url"> Video URL </label>
         <input id="video-url" type="text" />
       </div>
