--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       :root {
         --background-color: hsl(222, 47%, 8%);
         --primary: hsl(262, 83%, 58%);
+        --border-color: hsl(217, 33%, 20%);
         --ring: var(--primary);
         --card-hover-bg: hsl(262, 82%, 20%);
         --muted: hsl(215, 20%, 55%);
@@ -299,7 +300,34 @@
                   <circle cx="6" cy="18" r="3"></circle>
                   <circle cx="18" cy="16" r="3"></circle>
                 </svg>
-                <span>Audio</span>
+                <span>Audio (original)</span>
+              </label>
+            </div>
+
+            <div class="radio-card">
+              <input
+                id="audio-mp3"
+                name="quality"
+                type="radio"
+                value="audio-mp3"
+              />
+              <label for="audio-mp3">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M9 18V5l12-2v13"></path>
+                  <circle cx="6" cy="18" r="3"></circle>
+                  <circle cx="18" cy="16" r="3"></circle>
+                </svg>
+                <span>MP3</span>
               </label>
             </div>
           </div>
