--- a/index.html
+++ b/index.html
@@ -173,6 +173,93 @@
         outline: 2px solid var(--ring);
         outline-offset: 2px;
       }
+
+      /* Toggle-switch stuff */
+      .toggle-row {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      /* Aligns the Icon and the Label Text */
+      .toggle-label-group {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem; /* Space between icon and text */
+        cursor: pointer;
+      }
+
+      /* Ensure the SVG inside doesn't shrink */
+      .toggle-label-group svg {
+        flex-shrink: 0;
+        width: 1.25rem;
+        height: 1.25rem;
+        color: var(--muted);
+      }
+
+      .toggle-switch {
+        position: relative;
+        display: inline-block;
+        width: 3rem; /* 48px */
+        height: 1.75rem; /* 28px */
+        flex-shrink: 0; /* Prevents shrinking in flex containers */
+      }
+
+      /* Hide default HTML checkbox but keep it accessible for screen readers */
+      .toggle-switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+        position: absolute; /* Prevent layout displacement */
+      }
+
+      /* The slider (track) */
+      .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: var(--muted); /* Default off color */
+        transition: 0.3s;
+        border-radius: 2rem;
+      }
+
+      /* The slider thumb (circle) */
+      .slider:before {
+        position: absolute;
+        content: "";
+        height: 1.25rem; /* 20px */
+        width: 1.25rem;
+        left: 0.25rem;
+        bottom: 0.25rem;
+        background-color: white;
+        transition: 0.3s;
+        border-radius: 50%;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+      }
+
+      /* Checked State */
+      .toggle-switch input:checked + .slider {
+        background-color: var(--primary);
+      }
+
+      .toggle-switch input:checked + .slider:before {
+        transform: translateX(1.25rem); /* Move thumb to the right */
+      }
+
+      /* Accessibility: Focus Ring */
+      .toggle-switch input:focus-visible + .slider {
+        outline: 2px solid var(--ring);
+        outline-offset: 2px;
+      }
+
+      /* Update .toggle-row to align items vertically */
+      .toggle-row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center; /* Ensures text and switch are vertically centered */
+      }
     </style>
   </head>
   <body>
@@ -300,7 +387,7 @@
                   <circle cx="6" cy="18" r="3"></circle>
                   <circle cx="18" cy="16" r="3"></circle>
                 </svg>
-                <span>Audio (original)</span>
+                <span>Audio</span>
               </label>
             </div>
 
@@ -336,10 +423,30 @@
 
       <div class="togglable-options">
         <div class="form-group">
-          <label for="download-time-range" name="download-time-range">
-            Download Time range
-          </label>
-          <input id="download-time-range" type="checkbox" />
+          <div class="toggle-row">
+            <div class="toggle-label-group">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <circle cx="12" cy="12" r="10"></circle>
+                <polyline points="12 6 12 12 16 14"></polyline>
+              </svg>
+              <label for="download-time-range"> Download Time range </label>
+            </div>
+
+            <label class="toggle-switch">
+              <input id="download-time-range" type="checkbox" role="switch" />
+              <span class="slider"></span>
+            </label>
+          </div>
 
           <fieldset>
             <legend>Start Time</legend>
@@ -367,17 +474,70 @@
         </div>
 
         <div class="form-group">
-          <label for="exclude-playlist" name="exclude-playlist">
-            Exclude playlist
-          </label>
-          <input id="exclude-playlist" type="checkbox" />
+          <div class="toggle-row">
+            <div class="toggle-label-group">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path
+                  d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
+                ></path>
+                <path d="m9.5 10.5 5 5"></path>
+                <path d="m14.5 10.5-5 5"></path>
+              </svg>
+              <label for="exclude-playlist">Exclude playlist</label>
+            </div>
+
+            <label class="toggle-switch">
+              <input id="exclude-playlist" type="checkbox" role="switch" />
+              <span class="slider"></span>
+            </label>
+          </div>
         </div>
 
         <div class="form-group">
-          <label for="custom-output-name">Custom Output Name</label>
-          <input id="custom-output-name" type="checkbox" />
+          <div class="toggle-row">
+            <div class="toggle-label-group">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path
+                  d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
+                ></path>
+                <path d="M14 2v4a2 2 0 0 0 2 2h4"></path>
+                <path d="M10 9H8"></path>
+                <path d="M16 13H8"></path>
+                <path d="M16 17H8"></path>
+              </svg>
+              <label for="custom-output-name">Custom Output Name</label>
+            </div>
 
-          <fieldset id="custom-output-field" style="display: none">
+            <label class="toggle-switch">
+              <input id="custom-output-name" type="checkbox" role="switch" />
+              <span class="slider"></span>
+            </label>
+          </div>
+
+          <fieldset
+            id="custom-output-field"
+            style="display: none; margin-top: 16px"
+          >
             <legend>Output Template</legend>
             <input
               id="output-template"
