--- a/index.html
+++ b/index.html
@@ -298,6 +298,79 @@
       .start-time-fieldset {
         margin-top: 16px;
       }
+
+      /* Generated command stuff */
+      .output-wrapper h2 {
+        color: var(--muted);
+        font-size: var(--14px);
+        font-weight: 500;
+      }
+
+      .command-wrapper {
+        margin-top: 12px;
+        position: relative;
+      }
+
+      /* Code block */
+      .command-wrapper pre {
+        background: hsl(217, 33%, 17%);
+        padding: 1rem;
+        border-radius: 0.5rem;
+        overflow-x: auto;
+        font-size: 0.875rem;
+        line-height: 1.4;
+        white-space: pre-wrap;
+        word-break: break-all;
+      }
+
+      /* Copy button */
+      .copy-btn {
+        position: absolute;
+        top: 0.5rem;
+        right: 0.5rem;
+
+        display: inline-flex;
+        align-items: center;
+        gap: 0.5rem;
+
+        height: 2.25rem;
+        padding: 0 0.75rem;
+
+        background: var(--primary);
+        color: white;
+        border: none;
+        border-radius: 0.375rem;
+
+        font-size: 0.875rem;
+        font-weight: 500;
+        cursor: pointer;
+      }
+
+      .copy-btn:hover {
+        background: hsla(262, 83%, 58%, 0.9);
+      }
+
+      /* Focus ring */
+      .copy-btn:focus-visible {
+        outline: none;
+        box-shadow: 0 0 0 2px white, 0 0 0 4px var(--primary);
+      }
+
+      /* Disabled state */
+      .copy-btn:disabled {
+        opacity: 0.5;
+        pointer-events: none;
+      }
+
+      /* Icon */
+      .copy-btn svg {
+        width: 1rem;
+        height: 1rem;
+        stroke: currentColor;
+        fill: none;
+        stroke-width: 2;
+        pointer-events: none;
+      }
     </style>
   </head>
   <body>
@@ -589,11 +662,22 @@
 
     <div class="output-wrapper">
       <h2>Generated command</h2>
-      <pre>
-        yt-dlp "&lt;URL&gt;"
-      </pre>
-      <button>Copy</button>
+
+      <div class="command-wrapper">
+        <pre><code>yt-dlp -x --audio-format mp3 "&lt;URL&gt;"</code></pre>
+
+        <button class="copy-btn">
+          <svg viewBox="0 0 24 24" aria-hidden="true">
+            <rect x="8" y="8" width="14" height="14" rx="2"></rect>
+            <path
+              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
+            ></path>
+          </svg>
+          Copy
+        </button>
+      </div>
     </div>
+
     <script>
       // Main form inputs
       const videoUrlInput = document.getElementById("video-url");
@@ -701,6 +785,25 @@
         input.addEventListener("input", updateCommand);
       });
       excludePlaylistCheckbox.addEventListener("change", updateCommand);
+
+      // Copy to clipboard
+      copyButton.addEventListener("click", async () => {
+        try {
+          await navigator.clipboard.writeText(commandOutput.textContent);
+          const originalHTML = copyButton.innerHTML;
+          copyButton.innerHTML = `
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <polyline points="20 6 9 17 4 12"></polyline>
+            </svg>
+            Copied!
+          `;
+          setTimeout(() => {
+            copyButton.innerHTML = originalHTML;
+          }, 2000);
+        } catch (err) {
+          console.error("Failed to copy:", err);
+        }
+      });
     </script>
   </body>
 </html>
