Nah, I don't like autocomplete

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
       <p>Configure options and copy the ready-made command</p>
     </header>
 
-    <form>
+    <form autocomplete="off">
       <h2>Configuration</h2>
       <p class="configuration-sub-title">Customize your download options</p>
 
